<resources>
    <string name="app_name">HM Group OF Companies</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="alert_internet">There is no Internet Connectivity</string>
    <string name="enable_internet">Please enable your Internet Connectivity</string>
    <string name="alert_text">Alert</string>
    <string name="share_using">Enter Mobile No.</string>
    <string name="permission_camera_rationale11">Some permission are required to use the app.</string>
    <string name="reqst_permission">Request permission?</string>
    <string name="home_title">DashBoard</string>
    <string name="sales_title">Sales</string>
    <string name="customers_title">Customers</string>
    <string name="purchases_title">Purchases</string>
    <string name="products_title">Products</string>
    <string name="suppliers_title">Suppliers</string>
    <string name="settings_title">Settings</string>
    <string name="profiles_title">Profiles</string>
    <string name="users_title">Users</string>
    <string name="developed_by"><a href='https://hmgroupcompanies.com'>https://hmgroupcompanies.com/</a></string>
    <string name="facebook"><a href='http://www.facebook.com'>f</a></string>
    <string name="twitter"><a href='http://www.twitter.com'>t</a></string>
    <string name="youtube"><a href='http://www.youtube.com'>f</a></string>
    <string name="baseurl">demo1</string>
    <string-array name="product_name_array">
        <item>Select Product Name</item>
        <item>Soap</item>
        <item>Detergent</item>
        <item>Toothpaste</item>
        <item>Brush</item>
        <item>Mouthwash</item>
        <item>Shampoo</item>
        <item>Face Wash</item>
        <item>Hand Wash</item>
    </string-array>
    <string-array name="customer_name_array">
        <item>Select Customer</item>
        <item>Mr. Munir</item>
        <item>Mr. Mamun</item>
        <item>Mr. Mustofa</item>
        <item>Mr. Musharoof</item>
        <item>Mr. Masud</item>
        <item>Mr. Manik</item>
        <item>Mr. Munna</item>
    </string-array>
    <string-array name="supplier_name_array">
        <item>Select Supplier</item>
        <item>Abdul Haque</item>
        <item>Abdul Rab</item>
        <item>Abdul Karim</item>
        <item>Abdul Razzak</item>
        <item>Abdul Jabbar</item>
        <item>Abdul Latif</item>
    </string-array>
    <string name="Rs_symbol">\u20B9</string>
    <string name="your_booking">Your Booking</string>
    <string name="underscore">-</string>
    <string name="total_plot_amount">Total Plot Amount</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="pending_amount">Pending Amount</string>
    <string name="due_installments">Due Installments</string>
    <string name="plot_details">Plot Details</string>
    <string name="plot_rate">Plot Rate :</string>
    <string name="allotment_date">Allotment Date:</string>
    <string name="support">Support</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="my_profile">My Profile</string>
    <string name="plot_booking">Plot Booking</string>
    <string name="customer_details">Customer Details</string>
    <string name="my_summary">My Summary</string>
    <string name="plot_ledger">Plot ledger</string>
    <string name="plot_avaibility">Plot Avaibility</string>
    <string name="language_setting">Language Setting</string>
    <string name="edit_password">Edit Password</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name :</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_s_company_name">Supplier\'s Company Name</string>
    <string name="supplier_s_contact_person">Supplier\'s Contact Person</string>
    <string name="supplier_s_phone_number">Supplier\'s Phone Number</string>
    <string name="supplier_s_address">Supplier\'s Address</string>
    <string name="supplier_s_bank_name">Supplier\'s Bank Name</string>
    <string name="supplier_s_bank_account">Supplier\'s Bank Account</string>
    <string name="supplier_s_email">Supplier\'s Email</string>
    <string name="supplier_s_website">Supplier\'s Website</string>
    <string name="associate_detail">Associate Detail</string>
    <string name="bookingnumber">BookingNumber</string>
    <string name="booking_rate">Booking Rate</string>
    <string name="net_amt">Net Amt</string>
    <string name="booking_date">Booking Date</string>
    <string name="associate_details">Associate details</string>
    <string name="plot_number">Plot Number :</string>
    <string name="plot_area">Plot Area :</string>
    <string name="plot_size">Plot Size:</string>
    <string name="plotdetails">PlotDetails</string>
    <string name="plotrate">plotRate</string>
    <string name="contact_det_hmcrm192000440">contact det(HMCRM192000440)</string>
    <string name="start_date">Start Date</string>
    <string name="srno">Srno</string>
    <string name="installment_number">Installment number</string>
    <string name="plot_amt">Plot Amt</string>
    <string name="rate">Rate :</string>
    <string name="area">Area</string>
    <string name="paid_amt">Paid Amt</string>
    <string name="remaining_amt">Remaining Amt</string>
    <string name="booking_status">Booking Status</string>
    <string name="total_downline">Total Downline</string>
    <string name="total_directs">Total Directs</string>
    <string name="total_active">Total Active</string>
    <string name="total_inactive">Total Inactive</string>
    <string name="total_payout">Total Payout</string>
    <string name="total_paid_payout">Total Paid Payout</string>
    <string name="total_deduction">Total Deduction</string>
    <string name="payout_balance">Payout Balance</string>
    <string name="due_installment">Due Installment</string>
    <string name="show_all">Show All</string>
    <string name="business_report">Business Report</string>
    <string name="team">Team</string>
    <string name="total">Total</string>
    <string name="paid">Paid</string>
    <string name="balance">Balance</string>
    <string name="investment">Investment</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="due_date">Due Date</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone_number">Customer Phone Number</string>
    <string name="customer_email">Customer Email</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="customer_account_number">Customer Account number</string>
    <string name="customer_ifsc">Customer IFSC</string>
    <string name="bank_name">Bank name</string>
    <string name="bank_branch">Bank branch</string>
    <string name="dob">DOB</string>
    <string name="pan_number">Pan Number</string>
    <string name="customer_address">Customer Address</string>
    <string name="close">Close</string>
    <string name="customer_s_phone_number">Customer\'s Phone Number :</string>
    <string name="customer_s_e_mail">Customer\'s E-mail :</string>
    <string name="customer_discount">Customer Discount :</string>
    <string name="customer_id">Customer Id</string>
    <string name="contact_details">Contact Details</string>
    <string name="associate_management_2022_nversion_1_0_ndeveloped_by_ncontact_us_9721497374_nmail_us_hmcity7374_gmail_com">Associate Management 2022\nVersion 1.0\nDeveloped by\nContact us 9721497374\nMail us hmcity7374@gmail.com</string>
    <string name="end_date">End Date</string>
    <string name="select_site">Select Site</string>
    <string name="select_phase">Select Phase</string>
    <string name="select_block">Select Block</string>
    <string name="booking_no">Booking No</string>
    <string name="search">Search</string>
    <string name="customer_loginid">Customer LoginID</string>
    <string name="select_sector">Select Sector</string>
    <string name="booking_number">Booking Number</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="lastname">LastName</string>
    <string name="member_id">Member Id</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="pan_card">Pan Card</string>
    <string name="date_of_birth">Date OF Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bank_details">Bank Details</string>
    <string name="account_number">Account Number</string>
    <string name="branch_name">Branch Name</string>
    <string name="ifsc">IFSC</string>
    <string name="title">Title</string>
    <string name="feedback">Feedback...</string>
    <string name="send">Send</string>
    <string name="login_id">Login ID</string>
    <string name="or">OR</string>
    <string name="mobile_number">Mobile number</string>
    <string name="get_password">Get Password</string>
    <string name="back_to_login">Back to login</string>
    <string name="hm_green_city">HM Group OF Companies</string>
    <string name="all">All</string>
    <string name="booked">Booked</string>
    <string name="available">Available</string>
    <string name="alloted">Alloted</string>
    <string name="registered">Registered</string>
    <string name="subheading">Subheading...</string>
    <string name="customer_detail">Customer Detail :</string>
    <string name="product_name">Product Name</string>
    <string name="product_code">Product Code</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="product_expire_date">Product Expire Date</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity :</string>
    <string name="price">Price :</string>
    <string name="expire_date">Expire Date :</string>
    <string name="product_id">Product Id</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="purchase_product_quantity">Purchase Product Quantity</string>
    <string name="purchase_product_price">Purchase Product Price</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_payment">Total Payment</string>
    <string name="total_balance">Total Balance</string>
    <string name="purchase_payment">Purchase Payment</string>
    <string name="purchase_balance">Purchase Balance :</string>
    <string name="purchase_id">Purchase Id</string>
    <string name="sales_discount">Sales Discount</string>
    <string name="sales_date">Sales Date</string>
    <string name="sales_vat">Sales Vat</string>
    <string name="sales_amount">Sales Amount :</string>
    <string name="sales_id">Sales Id</string>
    <string name="is_downline">Is Downline</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="business_summary">Business Summary</string>
    <string name="company">Company</string>
    <string name="phone_number">Phone Number :</string>
    <string name="phone">Phone</string>
    <string name="address">Address :</string>
    <string name="supplier_id">Supplier Id</string>
    <string name="e_mail">E-mail</string>
    <string name="supplier_s_name">Supplier\'s Name :</string>
    <string name="Email">Email :</string>
    <string name="Address">Address</string>
    <string name="Cancel">Cancel</string>
    <string name="starTdate">Start Date</string>
</resources>