<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/supplier_alert_dialog_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/suppliers_alert_1"
            android:hint="@string/supplier_name"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/suppliers_alert_2"
            android:hint="@string/supplier_s_company_name"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/suppliers_alert_3"
            android:hint="@string/supplier_s_contact_person"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/suppliers_alert_4"
            android:hint="@string/supplier_s_phone_number"
            android:layout_marginBottom="10dp"
            android:inputType="phone"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/suppliers_alert_5"
            android:hint="@string/supplier_s_address"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/suppliers_alert_6"
            android:hint="@string/supplier_s_bank_name"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/suppliers_alert_7"
            android:hint="@string/supplier_s_bank_account"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/suppliers_alert_8"
            android:hint="@string/supplier_s_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/suppliers_alert_9"
            android:hint="@string/supplier_s_website"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/supplier_save_button"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Save"
            android:textColor="@color/white_color"
            android:background="@color/dark_grey_color"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>