<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/suppliers_list_item_id"
    android:background="@color/white_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/supplier_s_name"
                android:textColor="@color/dark_grey_color"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/suppliers_list_1"
                android:textColor="@color/dark_grey_color"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Company : "
            android:textColor="@color/dark_grey_color"
            android:textSize="11sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/suppliers_list_2"
                android:text="@string/company"
                android:textColor="@color/deep_grey_color"
                android:textSize="11sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/phone_number"
                android:textColor="@color/dark_grey_color"
                android:textSize="11sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/suppliers_list_3"
                android:text="@string/phone"
                android:textColor="@color/deep_grey_color"
                android:textSize="11sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/Email"
                android:textColor="@color/dark_grey_color"
                android:textSize="11sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/suppliers_list_4"
                android:text="@string/e_mail"
                android:textColor="@color/deep_grey_color"
                android:textSize="11sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/address"
                android:textColor="@color/dark_grey_color"
                android:textSize="11sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/suppliers_list_5"
                android:text="@string/Address"
                android:textColor="@color/deep_grey_color"
                android:textSize="11sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/suppliers_list_6"
            android:text="@string/supplier_id"
            android:visibility="gone"
            android:textColor="@color/deep_grey_color"
            android:textSize="11sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>