<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="35dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/login_photo"
        android:clickable="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/image_border"
        android:src="@drawable/logoh"
        android:layout_gravity="center"

        android:layout_width="90dp"
        android:layout_height="90dp" />
    <EditText
        android:id="@+id/login_username"
        android:textAlignment="center"
        android:hint="@string/login_id"
        android:background="@drawable/edit_text_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/for_or"
        android:text="@string/or"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_password"
        android:textAlignment="center"
        android:hint="@string/mobile_number"
        android:inputType="textPassword"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/login_button"
        android:text="@string/get_password"
        android:layout_marginBottom="25dp"
        android:textColor="@color/white_color"
        android:background="@color/dark_grey_color"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/for_forgot_password"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/back_to_login"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>