<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/customer_name"
            android:hint="@string/enter_old_password"
            android:singleLine="true"

            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <EditText
            android:id="@+id/customer_phone_number"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:singleLine="true"

            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/customer_email"
            android:hint="@string/confirm_new_password"
            android:inputType="textVisiblePassword"
            android:singleLine="true"

            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="100"
    >

    <Button
        android:id="@+id/customer_cancel_button"
        android:layout_marginBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_weight="50"
        android:text="@string/cancel"
        android:layout_marginHorizontal="3dp"
        android:textColor="@color/white_color"
        android:background="@color/grey"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/customer_save_button"
        android:layout_marginBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_weight="50"
        android:text="@string/update"
        android:layout_marginHorizontal="3dp"
        android:textColor="@color/white_color"
        android:background="@color/dark_grey_color"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>