<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_bg"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="8dp"
        android:hint="@string/starTdate"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_end_date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/ic_calendar" />

    <TextView
        android:id="@+id/tv_end_date"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/box_bg"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="8dp"
        android:hint="@string/end_date"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_start_date"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/ic_calendar" />

    <EditText
        android:id="@+id/tv_customer_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/box_bg"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:textSize="14sp"
        android:hint="@string/customer_name"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/tvCustomerLoginId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_date"
        android:layout_marginLeft="8dp"
         />

    <EditText
        android:id="@+id/tvCustomerLoginId"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/box_bg"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:textSize="14sp"

        android:hint="@string/customer_loginid"
        android:singleLine="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_customer_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_end_date"
       />


    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCustomerLoginId" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_grey_color"
        android:text="@string/search"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/tvCustomerLoginId" />

</androidx.constraintlayout.widget.ConstraintLayout>