<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">





    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/feedback_title"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:layout_marginHorizontal="8dp"
        android:hint="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_border"/>


    <EditText
        android:id="@+id/edt_feedback"
        android:layout_width="0dip"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:hint="@string/feedback"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="@+id/feedback_title"
        app:layout_constraintStart_toStartOf="@+id/feedback_title"
        app:layout_constraintTop_toBottomOf="@+id/feedback_title" />


    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/customer_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="50"
            android:background="@color/grey"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/Cancel"
            android:textColor="@color/white_color" />

        <Button
            android:id="@+id/customer_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="3dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="50"
            android:background="@color/dark_grey_color"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/send"
            android:textColor="@color/white_color" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>